- changed contract states (no more "secure") - restructured contract drafting (now attached to contracts rather than deals) - fix to Book Feed print view - fixing some defaults values on deal model - fixing bug #520 - fixing bug #509 where artwork path doesn't update on book change - fixing issue #517 (making target audience wider) - fixing jumping panel when using different sizes - fixing issue #516 (getting rid of "ok" button after upload) - adjusted acquisitions/deals view

--- a/src/model-editor.less
+++ b/src/model-editor.less
@@ -10,7 +10,7 @@ textarea {
 select {
 	max-width: 100%; // responsive support
 	position: relative;
-	font-size: .85em;
+	font-size: 1em;
 	padding: 5px 27px 5px 9px;
 	margin: 0;
 	-webkit-appearance: none;
@@ -315,14 +315,14 @@ select {
 	&.inline-checkbox {
 		label {
 			float: right;
-			margin: 7px 0 0 .5em;
+			margin: 5px 0 0 .5em;
 			font-size: 1.15em;
 		}
 	}
 	
 	&.empty {
 		.inner > p:first-child {
-			margin-top: .5em;
+			margin-top: .25em;
 		}
 	}
 	
