--- a/style.css
+++ b/style.css
@@ -271,7 +271,7 @@ textarea {
 select {
   max-width: 100%;
   position: relative;
-  font-size: .85em;
+  font-size: 1em;
   padding: 5px 27px 5px 9px;
   margin: 0;
   -webkit-appearance: none;
@@ -609,11 +609,11 @@ select:disabled {
 }
 .model-editor.inline-checkbox label {
   float: right;
-  margin: 7px 0 0 .5em;
+  margin: 5px 0 0 .5em;
   font-size: 1.15em;
 }
 .model-editor.empty .inner > p:first-child {
-  margin-top: .5em;
+  margin-top: .25em;
 }
 .model-editor.theme-text input[type="text"],
 .model-editor.theme-text input[type="email"],
